--- a/src/components/info-card/info-card.styles.scss
+++ b/src/components/info-card/info-card.styles.scss
@@ -21,28 +21,36 @@
 
   .content {
     height: 80px;
-    padding: 0 15px;
+    width: 115px;
+    padding: 0 5px;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: left;
+    background-color: white;
 
     .name {
       font-weight: bold;
-      margin-bottom: 6px;
-      font-size: 18px;
+      margin-top: 1px;
+      margin-bottom: 1px;
+      font-size: 16px;
       color: #030303;
+      text-align: center;
     }
     .address {
-      font-weight: bold;
-      margin-bottom: 6px;
-      font-size: 18px;
-      color: #030303;
+      font-weight: normal;
+      margin-top: 2px;
+      margin-bottom: 2px;
+      font-size: 11px;
+      color: blue;
+      text-align: center;
     }
     .notes {
-      font-weight: bold;
-      margin-bottom: 6px;
-      font-size: 18px;
+      font-weight: normal;
+      margin-top: 2px;
+      margin-bottom: 2px;
+      font-size: 12px;
       color: #030303;
+      text-align: center;
     }
   }
 }
