--- a/src/pages/beaches.styles.scss
+++ b/src/pages/beaches.styles.scss
@@ -1,6 +1,16 @@
-.beach-list {
-  width: 100%;
+.beachespage {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px 30px;
+
+  .pagename {
+    font-weight: bold;
+    margin-top: 0px;
+    margin-bottom: 20px;
+    font-size: 30px;
+    color: black;
+    text-align: center; 
+    
+  }
 }
