updated photos for beaches page

--- a/src/components/info-card/info-card.styles.scss
+++ b/src/components/info-card/info-card.styles.scss
@@ -5,10 +5,12 @@
   display: flex;
   align-items: center;
   justify-content: left;
-  border: 1px solid black;
+  border: 1px solid gray;
   margin: 0 7.5px 15px;
   background-position: center;
-  background-size: cover;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: right;
   
 
   &:first-child {
