--- a/src/components/info-card/info-card.styles.scss
+++ b/src/components/info-card/info-card.styles.scss
@@ -5,12 +5,10 @@
   display: flex;
   align-items: center;
   justify-content: left;
-  border: 1px solid gray;
   margin: 0 7.5px 15px;
-  background-position: center;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: right;
+  padding-bottom: 4px;
+  
+  
   
 
   &:first-child {
@@ -21,18 +19,35 @@
     margin-left: 7.5px;
   }
 
+  .location-photo {
+    height: 80px;
+    width: 150px;
+    padding: 0 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: right;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    flex: 1 1 auto;
+    display: flex;
+  }
+
+
   .content {
     height: 80px;
-    width: 115px;
+    width: 250px;
     padding: 0 5px;
     display: flex;
     flex-direction: column;
     align-items: left;
     background-color: white;
+    flex: 1 1 auto;
+    display: flex;
 
     .name {
       font-weight: bold;
-      margin-top: 1px;
+      margin-top: 0px;
       margin-bottom: 1px;
       font-size: 16px;
       color: #030303;
@@ -40,17 +55,17 @@
     }
     .address {
       font-weight: normal;
-      margin-top: 2px;
+      margin-top: 3px;
       margin-bottom: 2px;
-      font-size: 11px;
+      font-size: 10px;
       color: blue;
       text-align: center;
     }
     .notes {
       font-weight: normal;
-      margin-top: 2px;
+      margin-top: 3px;
       margin-bottom: 2px;
-      font-size: 12px;
+      font-size: 10px;
       color: #030303;
       text-align: center;
     }
