--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -5,19 +5,10 @@
   display: flex;
   align-items: center;
   justify-content: left;
-  border: 1px solid black;
   margin: 0 7.5px 15px;
   background-position: center;
   background-size: cover;
-  
-
-  &:first-child {
-    margin-right: 7.5px;
-  }
-
-  &:last-child {
-    margin-left: 7.5px;
-  }
+ 
 
   .content {
     height: 80px;
@@ -30,7 +21,7 @@
       font-weight: bold;
       margin-bottom: 6px;
       font-size: 18px;
-      color: #fdf9f9;
+      color: white;
     }
   }
 }
