--- a/src/components/info-card/info-card.styles.scss
+++ b/src/components/info-card/info-card.styles.scss
@@ -1,73 +1,22 @@
 .info-card {
-  min-width: 60%;
-  height: 80px;
-  flex: 1 1 auto;
   display: flex;
-  align-items: center;
-  justify-content: left;
-  margin: 0 7.5px 15px;
-  padding-bottom: 4px;
-  
-  
+  flex-direction: column;
+  padding: 0px 20px;
+  margin: 0px 10px 15px 10px;
   
 
-  &:first-child {
-    margin-right: 7.5px;
+  .title {
+    font-size: 14px;
+    margin-bottom: 10px;
   }
 
-  &:last-child {
-    margin-left: 7.5px;
-  }
-
-  .location-photo {
-    height: 80px;
-    width: 150px;
-    padding: 0 5px;
+  .card {
     display: flex;
-    flex-direction: column;
-    align-items: right;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-    flex: 1 1 auto;
-    display: flex;
-  }
-
-
-  .content {
-    height: 80px;
-    width: 250px;
-    padding: 0 5px;
-    display: flex;
-    flex-direction: column;
-    align-items: left;
-    background-color: white;
-    flex: 1 1 auto;
-    display: flex;
-
-    .name {
-      font-weight: bold;
-      margin-top: 0px;
-      margin-bottom: 1px;
-      font-size: 16px;
-      color: #030303;
-      text-align: center;
-    }
-    .address {
-      font-weight: normal;
-      margin-top: 3px;
-      margin-bottom: 2px;
-      font-size: 10px;
-      color: blue;
-      text-align: center;
-    }
-    .notes {
-      font-weight: normal;
-      margin-top: 3px;
-      margin-bottom: 2px;
-      font-size: 10px;
-      color: #030303;
-      text-align: center;
-    }
+    flex-direction: row;
+    justify-content: left;
+    column-gap: 5%;
+    row-gap: 15px;
+    flex-wrap: wrap; 
+    
   }
 }
