--- a/src/components/location-card/location-card.styles.scss
+++ b/src/components/location-card/location-card.styles.scss
@@ -39,4 +39,11 @@
     font-size: 16px;
     text-align: center;
   }
+  .imageUrl {
+      width: 100%;
+      height: 100px;
+      background-size: cover;
+      background-position: center;
+    
+  }
 }
