updated all secondary pages with a back button

--- a/src/components/backbutton/backbutton.styles.scss
+++ b/src/components/backbutton/backbutton.styles.scss
@@ -1,4 +1,4 @@
-.homebutton {
+.backbutton {
   height: 5px;
   width: 100%;
   display: flex;
@@ -7,8 +7,8 @@
   
   
   
-  .logo-container {
-    height: 100%;
+  .logo {
+    height: 900%;
     width: 25px;
     padding: 30px 45px;
     fill: white;
