--- a/src/components/location-card/location-card.styles.scss
+++ b/src/components/location-card/location-card.styles.scss
@@ -12,6 +12,7 @@
     font-size: 18px;
     font-weight: bold;
     text-align: center;
+    color: white;
     
   }
   .price {
@@ -19,12 +20,14 @@
     justify-content: space-between;
     font-size: 16px;
     text-align: center;
+    color: white;
   }
   .type {
     display: flex;
     justify-content: space-between;
     font-size: 16px;
     text-align: center;
+    color: white;
   }
  
   .address {
@@ -32,12 +35,14 @@
     justify-content: space-between;
     font-size: 14px;
     text-align: center;
+    color: white;
   }
   .linkUrl {
     display: flex;
     justify-content: space-between;
     font-size: 16px;
     text-align: center;
+    color: white;
   }
   .imageUrl {
       width: 100%;
