--- a/src/index.css
+++ b/src/index.css
@@ -5,13 +5,14 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: linear-gradient(-45deg, #fffdea, #ffecf6, #eaf9fb, #efffed);
-	background-size: 400% 400%;
-	animation: gradient 15s ease infinite;
+  background-color: black;
+  /* background: linear-gradient(-45deg, #fffdea, #ffecf6, #eaf9fb, #efffed); */
+	/* background-size: 400% 400%;
+	animation: gradient 15s ease infinite; */
   
   /* background-color: rgb(240, 240, 240); */
 }
-@keyframes gradient {
+/* @keyframes gradient {
 	0% {
 		background-position: 0% 50%;
 	}
@@ -21,7 +22,7 @@ body {
 	100% {
 		background-position: 0% 50%;
 	}
-}
+} */
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
