--- a/src/pages/main/beaches.styles.scss
+++ b/src/pages/main/beaches.styles.scss
@@ -10,7 +10,7 @@
     margin-top: 0px;
     margin-bottom: 20px;
     font-size: 30px;
-    color: black;
+    color: white;
     text-align: center; 
     
   }
