--- a/src/pages/secondary/restaurants/r.styles.scss
+++ b/src/pages/secondary/restaurants/r.styles.scss
@@ -45,7 +45,7 @@
     height: 40px;
     font-weight: normal;
     font-size: 100%;
-    color: black;
+    color: white;
     text-align: center;
     margin: 0px 0px 25px 60px;
     padding-bottom: 20px;
