--- a/src/components/location-card/location-card.styles.scss
+++ b/src/components/location-card/location-card.styles.scss
@@ -12,7 +12,8 @@
     font-size: 18px;
     font-weight: bold;
     text-align: center;
-    color: white;
+    padding-bottom: 4px;
+    color: rgb(204, 250, 250);
     
   }
   .price {
@@ -20,6 +21,7 @@
     justify-content: space-between;
     font-size: 16px;
     text-align: center;
+    padding-bottom: 2px;
     color: white;
   }
   .type {
@@ -34,6 +36,8 @@
     display: flex;
     justify-content: space-between;
     font-size: 14px;
+    padding-top: 4px;
+    padding-bottom: 8px;
     text-align: center;
     color: white;
   }
