added a text shadow to infocard styles .title

--- a/src/components/info-card/info-card.styles.scss
+++ b/src/components/info-card/info-card.styles.scss
@@ -8,8 +8,8 @@
   .title {
     font-size: 20px;
     margin-bottom: 20px;
-    text-decoration-line: underline;
     color: white;
+    text-shadow: 1px 1px 1px #1c0cf5;
   }
 
   .card {
